--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,35 +1,71 @@
 .greetingForm {
+    padding-bottom: 243px;
 }
 
 .inputAndButtonContainer {
+
 }
 
 .error {
+color: #CC0000;
 }
 
 .input {
+    width: 372px;
+    height: 36px;
+    margin-bottom: 10px;
+
+
 }
 
 .input:focus {
+
+
 }
 
 .errorInput {
+    border: 1px solid #CC0000;
+    width: 372px;
+    height: 36px;
 }
 
 .button {
+    padding: 5px 24px;
+    background: #0066CC;
+    border-radius: 3px;
+    color: #FFFFFF;
+    width: 78px;
+    height: 36px;
+    margin-left: 12px;
+
+
+
 }
 
 .button:focus {
+
 }
 
 .button:active {
+
 }
 
 .button:disabled {
+    padding: 5px 24px;
+    background: #0066CC;
+    opacity: 0.5;
+    border-radius: 3px;
+    color: #FFFFFF;
 }
 
 .text {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 9px;
 }
 
 .greeting {
+
 }
