--- a/src/s2-homeworks/hw04/Stand.module.css
+++ b/src/s2-homeworks/hw04/Stand.module.css
@@ -1,19 +1,24 @@
 .stand {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    margin-bottom: 60px;
+
+
 }
 
 .inputs {
     display: flex;
     flex-direction: column;
     gap: 48px;
+    margin-right: 132px;
 }
 
 .buttons {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    margin-right: 358px;
+    padding-top: 94px;
+
 }
 
 .checkboxes {
