--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,11 +1,23 @@
 .spanBlock {
+    margin-bottom: 16px;
 }
 
 .span {
+    font-family: 'Montserrat', sans-serif;
+
 }
 
 .input {
+    width: 246px;
+    height: 36px;
+    margin-bottom: 30px;
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
+    margin-left: 8px;
+
 }
 
 .pen {
+    margin-right: 10px;
+    padding-left: 8px;
 }
