--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,9 +3,21 @@
 }
 
 .hw {
+    margin-bottom: 35px;
+    padding: 37px 0px 0px 70px ;
 
 }
 
 .hwTitle {
+    border-top:  1px solid #D9D9D9;
+    border-bottom:  1px solid #D9D9D9;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    padding: 100px 0px 10px 70px;
+
+
+
 
 }
