--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -4,11 +4,27 @@
 
 .textarea {
 
+    width: 976px;
+    border-radius: 20px;
+    background: #F5F7FB;
+    padding: 12px 0px 12px 24px;
+    margin-left: 23px;
+
+
+
 }
 
 .button {
+    background: #0066CC;
+    border-radius: 20px;
+    color: #FFFFFF;
+    padding: 10px 39px;
+    margin-left: 15px;
+
+
 
 }
+
 
 .button:hover {
 
