--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,4 +1,5 @@
 .message {
+    margin: 20px 0px 73px 0px
 
 }
 
@@ -7,10 +8,23 @@
 }
 
 .imageAndText img {
-
+    width: 50px;
+    margin-right: 30px;
 }
 
 .text {
+    background-color: #0066CC;
+    margin-top: 24px;
+    display: inline-block;
+    border-radius: 15px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    font-family: 'Montserrat', sans-serif;
+    color: #FFFFFF;
+    padding: 7px 13px 7px 13px;;
 
 }
 
@@ -19,6 +33,12 @@
 }
 
 .name {
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+
 
 }
 
@@ -27,5 +47,11 @@
 }
 
 .time {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 12px;
+    letter-spacing: 0em;
+    text-align: left;
 
 }
