--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -2,19 +2,29 @@
 }
 
 .input {
+    height: 36px;
+    width: 372px;
+    border-radius: 5px;
+
 }
 
 .inputWrapper {
+
 }
 
 .superInput {
+
 }
 
 .errorInput {
+
+
 }
 
 .errorInput:focus {
+
 }
 
 .error {
+    color:red ;
 }
