--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,38 +1,67 @@
+
 .button {
-    color:yellow;
+    color: #0066CC;
+    height: 30px;
+    background-color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    border: 1px solid #0066CC;
+    border-radius: 3px;
+    margin: 0px 0px 18px 12px;
+    padding: 5px 24px;
+
 }
 
 .disabled {
+    margin-bottom: 24px;
+
 }
 
 .secondary {
+
 }
 
 .default {
+    background-color: #0066CC;
+    color: #FFFFFF;
+    margin-bottom: 24px;
+
 }
 
 .red {
-    color:red;
+    background-color: #CC1439;
+    color: #FFFFFF;
+    margin-bottom: 24px;
 }
 
 .default:hover {
+    background: #0080FF;
 }
 
 .red:hover {
+    background: #FF1A47;
 }
 
 .secondary:hover {
+    background: #E5F0FA;
 }
 
 
 .default:active {
+    background: #0059B3;
 }
 
 .secondary:active {
+    background: #C9E5FF;
 }
 
 .red:active {
+    background: #B31232;
 }
 
 .button:disabled {
+    background: #004D99;
+    opacity: 0.5;
+    border-radius: 3px;
+    color: #002E5C;
 }
