--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,24 @@
 .burgerMenuIcon {
+    width: 34px;
+    height: 34px;
+    margin: 15px;
+
+
+
 }
 
 .header {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    position: fixed;
+    background: #F5F7FB;
+    margin-bottom: 50px;
+
 }
 
 .header h1 {
+    margin-left: 1200px;
+    font-size: 24px;
+    padding: 15px 0px 15px 0px ;
 }
