--- a/src/s2-homeworks/hw09/Clock.module.css
+++ b/src/s2-homeworks/hw09/Clock.module.css
@@ -1,14 +1,21 @@
 .buttonsContainer {
+
 }
 
 .clock {
+    font-size: 20px;
+
+
 }
 
 .watch {
+padding-left: 20px;
 }
 
 .watch strong {
+
 }
 
 .more {
+    padding-left: 20px;
 }
